--- a/src/content/templates/template books/Games/gamesThemes.less
+++ b/src/content/templates/template books/Games/gamesThemes.less
@@ -32,6 +32,8 @@
     --game-draggable-color: var(--game-secondary-color);
     --game-draggable-bg-color: var(--game-primary-bg-color);
     --game-draggable-target-outline-color: var(--game-draggable-bg-color);
+    --game-draggable-padding-top: 0px;
+    --game-draggable-padding-bottom: 4px;
 
     --game-header-color: var(--game-secondary-color);
     --game-header-bg-color: var(--game-primary-bg-color);
